[package]
name = "ws-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.2", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
axum-typed-websockets = "0.5.0"